
- New features:

  * [cmdline]: Regular expressions are now supported to match names
               (same as apt-utils):

                $ aptitude show ^tf$

               Previously this would result in a "no such package"
               error.

- Internal changes:

  * Unified the way packages are selected from command line
    arguments.

[5/11/2012]
Version 0.6.8                               "Never need a reason,
                                             never need a rhyme"

This version of aptitude requires apt 0.9 and will not build against
earlier releases.

- Crashes and serious errors:

  * [all]: Fix build with g++ 4.7
           Thanks Adrian Lang for the patch (Closes: #672335)

- New features:

  * [all]: Support really big files in the download system

           This follows recent changes in apt which added support for
           files greater than several gigabytes in size -- using the
           'unsigned long long' type to store the file size.

  * [all]: Update to tasks support: task packages, multi-arch, syntax

           Task packages (introduced with tasksel 3.0) are
           meta-packages which define the dependencies of tasks.  The
           packages themselves have always worked but the 'tasks'
           grouping policy and '?task' search term did not support
           them.  This update corrects for this.

           As a result of this change to tasksel all Debian tasks now
           function exactly like meta-packages. (Closes: #382631)

           The syntax for installing tasks from the command line has
           been updated.  It now supports specifying an arch and
           requires the same syntax as apt-utils ('^' must be the last
           part of the name).  Examples:

             # aptitude install gnome-desktop^
             # aptitude install ssh-server^:armel

           This avoids ambiguity that may arise when a task and
           package have the same name.

- Minor bugs:
